--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.Hospitalapps" parent="android:Theme.Material.Light.NoActionBar" />
+    <!-- Tema utama aplikasi -->
+    <style name="Theme.Hospitalapps" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Warna utama -->
+        <item name="colorPrimary">@color/teal_200</item>
+        <item name="colorPrimaryDark">@color/teal_700</item>
+        <item name="colorAccent">@color/black</item>
+    </style>
+
 </resources>
