--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,15 +2,14 @@
 
 
 
-    <!-- Style untuk kategori -->
-    <style name="CategoryStyle">
+    <style name="CategoryButton" parent="Widget.AppCompat.Button">
         <item name="android:layout_width">100dp</item>
         <item name="android:layout_height">100dp</item>
-        <item name="android:background">#89CFF0</item>
-        <item name="android:gravity">center</item>
-        <item name="android:textColor">#FFFFFF</item>
-        <item name="android:textStyle">bold</item>
         <item name="android:layout_margin">8dp</item>
+        <item name="android:backgroundTint">#03C4F4</item>
+        <item name="android:textColor">@android:color/white</item>
+
     </style>
+
 
 </resources>
