--- a/app/src/main/res/layout/fragment_riwayat.xml
+++ b/app/src/main/res/layout/fragment_riwayat.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".RiwayatFragment">
+    tools:context=".AntrianActivity">
 
     <!-- Header -->
     <RelativeLayout
