--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,18 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Tema utama aplikasi -->
-    <style name="Theme.Hospitalapps" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Warna utama -->
+    <!-- Main App Theme -->
+    <style name="Theme.Hospitalapps" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Primary colors -->
         <item name="colorPrimary">@color/teal_200</item>
-        <item name="colorPrimaryDark">@color/teal_700</item>
-        <item name="colorAccent">@color/black</item>
+        <item name="colorPrimaryVariant">@color/teal_700</item>
+        <item name="colorOnPrimary">@color/white</item>
+
+        <!-- Secondary colors -->
+        <item name="colorSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
+
+        <!-- Status bar -->
+        <item name="android:statusBarColor" tools:targetApi="l">@color/teal_700</item>
     </style>
 
 </resources>
