--- a/app/src/main/res/layout/item_doctor.xml
+++ b/app/src/main/res/layout/item_doctor.xml
@@ -56,6 +56,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Tersedia" />
+                    <TextView
+                        android:id="@+id/tv_unavailable_msg"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Dokter tidak menerima pendaftaran hari ini"
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="12sp"
+                        android:layout_marginTop="4dp"
+                        android:visibility="gone" />
+
                 </LinearLayout>
             </LinearLayout>
 
