--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,9 +95,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="start|top"
                     android:layout_marginTop="170dp"
-                    android:background="@drawable/bg_button_white"
+                    android:background="@drawable/bg_button_primary"
                     android:text="Our Services"
-                    android:textColor="#03C4F4"
+                    android:textColor="@color/black"
                     android:textSize="12sp"
                     android:paddingHorizontal="14dp"
                     android:paddingVertical="6dp"
