--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,8 @@
     <!-- Main App Theme -->
     <style name="Theme.Hospitalapps" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary colors -->
-        <item name="colorPrimary">@color/teal_200</item>
+        <item name="colorPrimary">#B3E5FC</item>
+
         <item name="colorPrimaryVariant">@color/teal_700</item>
         <item name="colorOnPrimary">@color/white</item>
 
