--- a/app/src/main/res/menu/admin_menu.xml
+++ b/app/src/main/res/menu/admin_menu.xml
@@ -13,8 +13,8 @@
             android:title="Laporan"
             android:icon="@drawable/ic_report" />
         <item
-            android:id="@+id/nav_cetak"
-            android:title="Cetak Laporan"
-            android:icon="@drawable/ic_print" />
+            android:id="@+id/nav_logout"
+            android:title="Logout"
+            android:icon="@drawable/ic_admin" />
     </group>
 </menu>
