--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -6,36 +6,36 @@
     android:padding="16dp">
 
     <ImageView
-        android:src="@drawable/ic_person"
+        android:id="@+id/imgProfile"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:src="@drawable/ic_person"
         android:contentDescription="Profile"
-        android:layout_gravity="center_vertical" />
+        android:layout_gravity="center_horizontal" />
 
     <TextView
         android:id="@+id/txtUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="guest"
-
+        android:text="Guest"
         android:textSize="16sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/black"
         android:layout_marginTop="8dp"
-        android:textColor="@android:color/black" />
+        android:layout_gravity="center_horizontal"/>
 
     <TextView
         android:id="@+id/txtLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Sambungkan akun anda?"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="14sp"
+        android:textStyle="bold"
         android:layout_marginTop="6dp"
-        android:layout_marginBottom="6dp"
-        android:paddingBottom="4dp"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?attr/selectableItemBackground"
-        android:text="Sambungkan akun anda?"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
