--- a/app/src/main/res/layout/fragment_data_poli.xml
+++ b/app/src/main/res/layout/fragment_data_poli.xml
@@ -5,8 +5,8 @@
     android:orientation="vertical"
     android:padding="8dp">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_poli"
+    <ListView
+        android:id="@+id/list_poli"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </LinearLayout>
